Updates based on recent setup.